
file (GLOB LIBMDHTML_HEADERS *.hpp )
file (GLOB LIBMDHTML_SOURCES *.cpp )

include_directories(.)
if( MDHTML_SHARED )
	add_library( MdHtml++ SHARED ${LIBMDHTML_SOURCES} )
	set( MDHTML_PKGCONFIG_LIBNAME "libMdHtml++.so" )
else()
	add_library( MdHtml++ STATIC ${LIBMDHTML_SOURCES} )
	set( MDHTML_PKGCONFIG_LIBNAME "libMdHtml++.a" )
endif()

if( MDHTML_DONT_BUILD_GUI_CONVERT )
else()
    add_subdirectory( gui_convert )
endif()

if( MDHTML_DONT_BUILD_GUI_EDIT )
else()
#    add_definitions( -DMDHTML_QT_SUPPORT=1 )
#    add_subdirectory( gui_edit )
endif()

if( MDHTML_QT_SUPPORT )
    add_subdirectory( qt )
endif()

if( MDHTML_DONT_BUILD_BIN )
else()
    add_subdirectory( bin )
endif()

if( MDHTML_HEADER_INSTALL_DIR )
else()
	set( MDHTML_HEADER_INSTALL_DIR ${MDHTML_DESTDIR}/include/libmdhtml )
endif()

if ( MDHTML_LIB_INSTALL_DIR )
else()
	set ( MDHTML_LIB_INSTALL_DIR ${MDHTML_DESTDIR}/lib )
endif()

if( MDHTML_INSTALL_LIBS )
	install(TARGETS MdHtml++ DESTINATION ${MDHTML_LIB_INSTALL_DIR} )
	install(FILES ${LIBMDHTML_HEADERS} DESTINATION ${MDHTML_HEADER_INSTALL_DIR} )
	install(FILES ${PROJECT_SOURCE_DIR}/lib/LibMdHtml++Config.cmake DESTINATION "${MDHTML_LIB_INSTALL_DIR}/cmake/LibMdHtml++" )
	configure_file(${PROJECT_SOURCE_DIR}/lib/LibMdHtml++.pc.in ${CMAKE_CURRENT_BINARY_DIR}/LibMdHtml++.pc @ONLY)
	install(FILES ${CMAKE_CURRENT_BINARY_DIR}/LibMdHtml++.pc DESTINATION "${MDHTML_LIB_INSTALL_DIR}/pkgconfig" )
endif()
